menghapus file style.css dan mengubah file index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- style{
+        background-color: aqua;
+    } -->
+    <style>body{
+        background-color: aqua;
+    }</style>
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
     <head>
         <title>Belajar Ngegit</title>
     </head>
