--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Belajar Ngegit</title>
     </head>
     <body>
-        <p>Hallow ini cuman untuk belajar Ngegit.</p>
+        <h1>Hallow ini cuman untuk belajar Ngegit.</h1>
+        <p>ini cuman paragraf saja</p>
     </body>
 </html>
