mengubah file index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>Belajar Ngegit</title>
     </head>
     <body>
-        <p>Hallow ini cuman untuk belajar Ngegit.</p>
+        <h4>Hallow ini cuman untuk belajar Ngegit.</h4>
+        <p>Coba paragraph</p>
     </body>
 </html>
